--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -19,21 +20,23 @@ body {
   animation: efectoEstelar 30s linear infinite alternate;
 }
 
-
 .container-to45 {
-  background: repeating-linear-gradient(45deg,
-      transparent 0 30px,
-      var(--primary-color) 31px 33px);
+  background: repeating-linear-gradient(
+    45deg,
+    transparent 0 30px,
+    var(--primary-color) 31px 33px
+  );
 }
 
 .container-to-45 {
-  background: repeating-linear-gradient(-45deg,
-      transparent 0 30px,
-      var(--primary-color) 31px 33px);
+  background: repeating-linear-gradient(
+    -45deg,
+    transparent 0 30px,
+    var(--primary-color) 31px 33px
+  );
 }
 
 @keyframes efectoEstelar {
-
   0%,
   100% {
     transform: scale(1);
@@ -46,5 +49,4 @@ body {
   70% {
     transform: scale(1.3);
   }
-
 }
